crates/math-core/tests/snapshots/error_test__cramped_bad_arg.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\cramped[1]{x}"
---
Error: Expected one of `\displaystyle`, `\textstyle`, `\scriptstyle`, or `\scriptscriptstyle`
   ╭─[ <input>:1:10 ]
   │
 1 │ \cramped[1]{x}
   │          ┬  
   │          ╰── expected a style
───╯
